// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon prop badge 1`] = `
<DocumentFragment>
  .c1.mul-info {
  position: absolute;
  top: 0;
  right: 0;
  box-sizing: border-box;
  min-width: 1rem;
  padding: 0 0.1875rem;
  color: #fff;
  font-weight: 500;
  font-size: 0.75rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
  line-height: calc(1rem - 0.0625rem * 2);
  text-align: center;
  background-color: #ee0a24;
  border: 0.0625rem solid #fff;
  border-radius: 1rem;
  -webkit-transform: translate(50%,-50%);
  -ms-transform: translate(50%,-50%);
  transform: translate(50%,-50%);
  -webkit-transform-origin: 100%;
  -ms-transform-origin: 100%;
  transform-origin: 100%;
}

.c1.mul-info.mul-info--dot {
  width: 0.5rem;
  min-width: 0;
  height: 0.5rem;
  background-color: #ee0a24;
  border-radius: 100%;
}

.c0.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c0.mul-icon::before {
  display: inline-block;
}

.c0.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c0.mul-icon-chat-o::before {
  content: '\\F02D';
}

<i
    class="c0 mul-icon mul-icon-chat-o"
    content="F02D"
    name="chat-o"
    style="font-size: 1.25rem;"
  >
    <div
      class="c1 mul-info"
    >
      99
    </div>
  </i>
</DocumentFragment>
`;

exports[`Icon prop dot 1`] = `
<DocumentFragment>
  .c1.mul-info {
  position: absolute;
  top: 0;
  right: 0;
  box-sizing: border-box;
  min-width: 1rem;
  padding: 0 0.1875rem;
  color: #fff;
  font-weight: 500;
  font-size: 0.75rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
  line-height: calc(1rem - 0.0625rem * 2);
  text-align: center;
  background-color: #ee0a24;
  border: 0.0625rem solid #fff;
  border-radius: 1rem;
  -webkit-transform: translate(50%,-50%);
  -ms-transform: translate(50%,-50%);
  transform: translate(50%,-50%);
  -webkit-transform-origin: 100%;
  -ms-transform-origin: 100%;
  transform-origin: 100%;
}

.c1.mul-info.mul-info--dot {
  width: 0.5rem;
  min-width: 0;
  height: 0.5rem;
  background-color: #ee0a24;
  border-radius: 100%;
}

.c0.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c0.mul-icon::before {
  display: inline-block;
}

.c0.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c0.mul-icon-chat-o::before {
  content: '\\F02D';
}

<i
    class="c0 mul-icon mul-icon-chat-o"
    content="F02D"
    name="chat-o"
    style="font-size: 1.25rem;"
  >
    <div
      class="c1 mul-info mul-info--dot"
    />
  </i>
</DocumentFragment>
`;

exports[`Icon prop name url 1`] = `
<DocumentFragment>
  .c0.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c0.mul-icon::before {
  display: inline-block;
}

.c0.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c0.mul-icon-::before {
  content: '\\ ';
}

<i
    class="c0 mul-icon"
    name="https://avatar.chengfayun.com.cn/chengfayun-avatar/6ce849b003c18744b54d1a9913db75e9.png"
    style="font-size: 1.25rem;"
  >
    <img
      class="mul-icon__image"
      src="https://avatar.chengfayun.com.cn/chengfayun-avatar/6ce849b003c18744b54d1a9913db75e9.png"
    />
  </i>
</DocumentFragment>
`;

exports[`Icon prop size 1`] = `
<DocumentFragment>
  .c0.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c0.mul-icon::before {
  display: inline-block;
}

.c0.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c0.mul-icon-chat-o::before {
  content: '\\F02D';
}

<i
    class="c0 mul-icon mul-icon-chat-o"
    content="F02D"
    name="chat-o"
    style="font-size: 1.875rem;"
  />
</DocumentFragment>
`;
